# parallel-pano

./: README.md
firmware/: Makefile  l3g4200d.c  lis3mdl.c  twitest.c
opencv/: CMakeLists.txt  convert.cpp  recorder.cpp  showit.cpp  stitcher.cpp  stitching_detailed.cpp  vidconv.cpp
