cmake_minimum_required(VERSION 2.8)
project( recorder )
find_package( OpenCV REQUIRED )

INCLUDE_DIRECTORIES(/usr/include/c++)
INCLUDE_DIRECTORIES(${OpenCV_LIBS})

add_executable( recorder recorder.cpp )
add_executable( stitcher stitcher.cpp )
add_executable( stitching_detailed stitching_detailed.cpp )
add_executable( convert convert.cpp )
add_executable( vidconv vidconv.cpp )
add_executable( showit showit.cpp )
target_link_libraries( recorder ${OpenCV_LIBS} )
target_link_libraries( stitcher ${OpenCV_LIBS} )
target_link_libraries( stitching_detailed ${OpenCV_LIBS} )
target_link_libraries( convert ${OpenCV_LIBS} )
target_link_libraries( vidconv ${OpenCV_LIBS} )
target_link_libraries( showit ${OpenCV_LIBS} )
